[package]
name = "tiger-pkg"
version = "0.18.4"
edition = "2021"
authors = ["cohaereo <cohae@cohae.dev>", "nblock <nblock@nblock.dev>"]
description = "Tiger engine package reading library for Destiny 1/2 and Marathon"
homepage = "https://github.com/v4nguard/tiger-pkg"
repository = "https://github.com/v4nguard/tiger-pkg"
documentation = "https://docs.rs/tiger-pkg"
license = "MIT"
readme = "README.md"
categories = ["data-structures", "compression", "encoding"]
keywords = ["destiny", "pkg", "package", "bungie", "tiger"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
anyhow = "1"
bincode = { version = "2.0.0-rc.3" }
binrw = "0.13"
clap = { version = "4.5.4", features = ["derive"] }
clap-num = "1.0.2"
hex = "0.4.3"
itertools = "0.13"
lazy_static = "1"
libloading = "0.8.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
tracing = { version = "0.1.37", features = ["log"] }

[features]
# Reverses TagHashes before printing them (old format)
flip_tag_format = []
ignore_caches = ["ignore_package_cache", "ignore_lookup_cache"]
ignore_package_cache = []
ignore_lookup_cache = []
# Provides a global package manager instance
global_manager_instance = []

[dev-dependencies]
env_logger = "0.10.0"
pbr = "1.1.1"
rayon = "1.7.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-tracy = "0.11.4"
tracy-client = "0.18.0"

[package.metadata.appimage]
auto_link = true
assets = ["liblinoodle.so"]

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"

[profile.dev.package.aes]
opt-level = 3

[profile.dev.package.aes-gcm]
opt-level = 3
